<resources>
    <string name="accelerometer">Accelerometer </string>
    <string name="accelerometer_desc">The acceleration sensor determines the acceleration that is applied to a device (Ad) by measuring the forces that are applied to the sensor
        itself.</string>
    <string name="action_settings">Settings</string>
    <string name="ambient_temperature">Ambient Temperature </string>
    <string name="ambient_temperature_desc">This sensor monitors the ambient Temperature. </string>
    <string name="available_sensors">These are the sensors available on your device. Click on them to view details. </string>
    <string name="app_name">Android Client</string>
    <string name="camera_app">Device Camera Application </string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="celsius">°C</string>
    <string name="cont_location_app">Continuous location service </string>
    <string name="custom_camera_app">Custom Camera Application</string>
    <string name="cm">cm </string>
    <string name="description_info">Info</string>
    <string name="game_rotation">Game rotation </string>
    <string name="game_rotation_desc">The game rotation vector sensor is identical to the Rotation Vector Sensor, except it does not use the geomagnetic field. Therefore the Y axis does not point north but instead to some other reference. </string>
    <string name="geomagnetic_rotation">Geomagnetic rotation </string>
    <string name="geomagnetic_rotation_desc">The geomagnetic rotation vector sensor is similar to the Rotation Vector Sensor, but it uses a magnetometer instead of a gyroscope. The accuracy of this sensor is lower than the normal rotation vector sensor, but the power consumption is reduced. Only use this sensor if you want to collect some rotation information in the background without draining too much battery. </string>
    <string name="getFullImage">Take full pic</string>
    <string name="getThumbnail">Take a thumbnail</string>
    <string name="go">Go </string>
    <string name="glance_gesture">Glance gesture </string>
    <string name="gravity_sensor">Gravity Sensor </string>
    <string name="gravity_sensor_desc">The gravity sensor provides a three dimensional vector indicating the direction and magnitude of gravity. Typically, this sensor is used
        to determine the device\'s relative orientation in space. When a device is at rest, the output of the gravity sensor should be identical to that of the accelerometer.</string>
    <string name="gyroscope">Gyroscope </string>
    <string name="gyroscope_desc">The gyroscope measures the rate of rotation in rad/s around a device\'s x, y, and z axis.</string>
    <string name="gyroscope_uncalibrated">Gyroscope Uncalibrated </string>
    <string name="gyroscope_uncalibrated_desc">The uncalibrated gyroscope is similar to the gyroscope, except that no gyro-drift compensation is applied to the rate of rotation.</string>
    <string name="heart_rate">Heart rate </string>
    <string name="heart_rate_desc">Heart rate </string>
    <string name="humidity_sensor">This sensor monitors the relative ambient humidity. </string>
    <string name="humidity_sensor_desc">Humidity Sensor </string>
    <string name="intro_msg">Hello. Welcome to the Android Client Module. This module is intended to help you to create mobile applications that use the built-in hardwares
    of your mobile phone, such as the camera, microphone and sensors. You can start understanding the module by picking one of our sample examples bellow.</string>
    <string name="light_sensor">Light Sensor </string>
    <string name="light_sensor_desc">This sensor monitors the illuminance coming into the device. </string>
    <string name="linear_acceleration">Linear Acceleration </string>
    <string name="linear_acceleration_desc">The linear acceleration sensor provides you with a three-dimensional vector representing acceleration along each device axis,
        excluding gravity. You typically use this sensor when you want to obtain acceleration data without the influence of gravity. For example, you could use this sensor to
        see how fast your car is going. The linear acceleration sensor always has an offset, which you need to remove by calibrating the device when it is resting on a table.
    </string>
    <string name="lux">lux </string>
    <string name="lux_desc">lux </string>
    <string name="location_app">Single location service </string>
    <string name="magnetometer">Magnetometer </string>
    <string name="magnetometer_desc">Magnetometer </string>
    <string name="microseconds">micro seconds </string>
    <string name="microtesla">μT </string>
    <string name="ms2">m/s² </string>
    <string name="magnetic_field">Magnetic field </string>
    <string name="magnetic_field_desc">The geomagnetic field sensor lets you monitor changes in the earth\'s magnetic field. you can use the rotation vector sensor to determine
        raw rotational movement or you can use the accelerometer and geomagnetic field sensor in conjunction to determine yaw, pitch and roll values.</string>
    <string name="magnetic_field_uncal">Magnetic field uncalibrated </string>
    <string name="magnetic_field_uncal_desc">The uncalibrated magnetometer is similar to the geomagnetic field sensor, except that no hard iron calibration is applied to the magnetic field. Factory calibration and temperature compensation are still applied to the magnetic field. The uncalibrated magnetometer is useful to handle bad hard iron estimations.</string>
    <string name="min_delay">Minimum delay: </string>
    <string name="microphone_app">Microphone application </string>
    <string name="msg_req_perm">You have to grant permission for using this page\'s functionalities.</string>
    <string name="msg_photo_taken">Your picture has been saved to </string>
    <string name="not_available">Not available </string>
    <string name="pickup_gesture">Pick-up gesture</string>
    <string name="play">Play</string>
    <string name="power_consumption">Power consumption: </string>
    <string name="pressure_sensor">Pressure Sensor </string>
    <string name="pressure_sensor_desc">This sensor monitors the ambient air pressure.</string>
    <string name="proximity_sensor">Proximity Sensor </string>
    <string name="proximity_sensor_desc">The proximity sensor lets you determine how far away an object is from a device.</string>
    <string name="quat">quat. </string>
    <string name="rads">rad/s </string>
    <string name="range">Range: </string>
    <string name="record">Record </string>
    <string name="record_video">Record Video </string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="resolution">Resolution: </string>
    <string name="rotation_sensor">Rotation Sensor </string>
    <string name="rotation_sensor_desc">The rotation vector represents the orientation of the device as a combination of an angle and an axis, in which the device has rotated
        through an angle θ around an axis (x, y, or z). X approximately points to east, Y to north and Z to the sky (perpendicular to the ground). </string>
    <string name="sensor_app">Sensors application </string>
    <string name="significant_motion">Significant motion </string>
    <string name="significant_motion_desc">The significant motion sensor triggers an event each time significant motion is detected and then it disables itself. The sensor continues to operate while the device is asleep
     and will automatically wake the device to notify when significant motion is detected.</string>
    <string name="speechtotext_app">Speech to Text Application </string>
    <string name="step_detector">Step detector </string>
    <string name="step_detector_desc">The step detector sensor triggers an event each time the user takes a step. The latency is expected to be below 2 seconds. </string>
    <string name="step_counter">Step counter </string>
    <string name="step_counter_desc">The step counter sensor provides the number of steps taken by the user since the last reboot while the sensor was activated. The step counter has more latency (up to 10 seconds) but more accuracy than the step detector sensor.  </string>
    <string name="stop_playing">Stop playing </string>
    <string name="stop_recording">Stop recording </string>
    <string name="tilt_detector">Tilt detector </string>
    <string name="tilt_detector_desc">A sensor of this type generates an event each time a tilt event is detected. A tilt event is generated if the direction of the 2-seconds
        window average gravity changed by at least 35 degrees since the activation of the sensor.  </string>
    <string name="type">Type: </string>
    <string name="unity">Unity: </string>
    <string name="values">Values: </string>
    <string name="wake_gesture">wake gesture </string>
    <string name="which_app">Samples available: </string>
    <string name="x">X = </string>
    <string name="y">Y = </string>
    <string name="z">Z = </string>

    <!-- My activity strings: -->

    <string name="distance_to_go_text_view">Distância a percorrer (m):</string>
    <string name="update_time_text_view">Tempo de atualização (s):</string>
    <string name="start_button">Iniciar</string>
    <string name="travelled_distance">Distância percorrida: </string>
    <string name="final_congratulation">Muito bem. Você conseguiu!</string>
    <string name="exit_button">Sair</string>
    <string name="restart_button">Recomeçar</string>

</resources>
